tests/negative/class/class_static_this.tx
// EXPECTED: COMPILE_ERROR
// Description: 'this' cannot be used inside a static method.

class Counter {
    static value: int = 1;

    static next(): int {
        return this.value;
    }
}

function main() {}
